sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort: error: not found: value shellSort
		shellSort();
                ^AlgShellSort:23: error: value ecart is not a member of Int
        setValeur(i-(j+1)ecart, v)
                         ^